--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*style for body*/
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #20201f;    
+    background-color: #082032;    
     color: white;
 }
 /*style for .flex-container of bars*/
